--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "me-vue-ui",
+  "name": "meui-vue",
   "description": "A Vue UI",
-  "version": "0.0.3",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/andurils/mevue"
-  },
-  "author": "anduril <egger@outlook.com>",
-  "license": "MIT",
-  "private": false,
-  "main": "lib/me-vue.umd.min.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lib": "vue-cli-service build --target lib --name me-vue --dest lib packages/index.js",
+    "lint": "vue-cli-service lint",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -25,25 +18,24 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-plugin-unit-mocha": "~4.4.0",
-    "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
-    "chai": "^4.1.2",
-    "gh-pages": "^3.0.0",
-    "highlight.js": "^9.18.1",
-    "markdown-it": "^10.0.0",
-    "markdown-it-container": "^2.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^6.2.2",
+    "gh-pages": "^3.1.0",
+    "markdown-it": "^12.0.4",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.6.11"
-  },
-  "keywords": [
-    "vue",
-    "components",
-    "markdown"
-  ]
+  }
 }
