--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "eslint-plugin-vue": "^6.2.2",
     "gh-pages": "^3.1.0",
     "markdown-it": "^12.0.4",
+    "markdown-it-anchor": "^7.0.1",
+    "markdown-it-chain": "^1.3.0",
+    "markdown-it-container": "^3.0.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "transliteration": "^2.2.0",
     "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.6.11"
   }
