--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "description": "A Vue.js 2.0 UI Toolkit for Web",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:dist": "webpack --config  build/webpack.config.js",
+    "dev": "webpack-dev-server --config build/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -15,9 +17,7 @@
     "url": "https://github.com/andurils/me-vue-ui/issues"
   },
   "homepage": "https://github.com/andurils/me-vue-ui#readme",
-  "dependencies": {
-    "vue": "^2.6.12"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "vue": "^2.6.12"
   },
@@ -26,10 +26,14 @@
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
     "css-loader": "^5.0.2",
+    "html-webpack-plugin": "^5.2.0",
+    "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
+    "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.24.1",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
   }
 }
