--- a/package.json
+++ b/package.json
@@ -4,8 +4,29 @@
   "description": "A Vue.js 2.0 UI Toolkit for Web",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:dist": "webpack --config  build/webpack.config.js",
-    "dev": "webpack-dev-server --config build/webpack.config.js"
+    "build:dist": "cross-env NODE_ENV=development webpack --config  build/webpack.config.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.js"
+  },
+  "dependencies": {},
+  "peerDependencies": {
+    "vue": "^2.6.12"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.1",
+    "@babel/preset-env": "^7.13.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.2.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.24.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
   },
   "repository": {
     "type": "git",
@@ -16,24 +37,5 @@
   "bugs": {
     "url": "https://github.com/andurils/me-vue-ui/issues"
   },
-  "homepage": "https://github.com/andurils/me-vue-ui#readme",
-  "dependencies": {},
-  "peerDependencies": {
-    "vue": "^2.6.12"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.13.0",
-    "@babel/core": "^7.13.1",
-    "@babel/preset-env": "^7.13.5",
-    "css-loader": "^5.0.2",
-    "html-webpack-plugin": "^5.2.0",
-    "style-loader": "^2.0.0",
-    "url-loader": "^4.1.1",
-    "vue": "^2.6.12",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.24.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
-  }
+  "homepage": "https://github.com/andurils/me-vue-ui#readme"
 }
