babel配置，支持JSX解析

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,8 @@
 {
-  "presets": ["@babel/env"] // "@babel/preset-env"
-  // "plugins": ["@babel/transform-arrow-functions"] // same as "@babel/plugin-transform-arrow-functions"
+  "presets": [
+    "@babel/env"
+  ],
+  "plugins": [
+    "transform-vue-jsx"
+  ]
 }
