--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "description": "A Vue.js 2.0 UI Toolkit for Web",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf dist && rimraf packages/*/lib && rimraf test/**/coverage",
     "build:dist": "cross-env NODE_ENV=development webpack --config  build/webpack.config.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "babel-helper-vue-jsx-merge-props": "^2.0.3"
+  },
   "peerDependencies": {
     "vue": "^2.6.12"
   },
@@ -15,8 +17,12 @@
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
+    "cz-conventional-changelog": "^3.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
     "style-loader": "^2.0.0",
@@ -37,5 +43,10 @@
   "bugs": {
     "url": "https://github.com/andurils/me-vue-ui/issues"
   },
-  "homepage": "https://github.com/andurils/me-vue-ui#readme"
+  "homepage": "https://github.com/andurils/me-vue-ui#readme",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
