feat(引入eslint prttier實現代碼風格檢查和格式化): eSlint+Prettier

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "A Vue.js 2.0 UI Toolkit for Web",
   "scripts": {
+    "lint": "eslint --fix examples  packages ",
     "clean": "rimraf dist && rimraf packages/*/lib && rimraf test/**/coverage",
     "build:dist": "cross-env NODE_ENV=development webpack --config  build/webpack.config.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.js"
@@ -17,14 +18,21 @@
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.6.0",
+    "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
+    "prettier": "2.2.1",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "vue": "^2.6.12",
