--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lint": "eslint --fix examples  packages ",
     "clean": "rimraf dist && rimraf packages/*/lib && rimraf test/**/coverage",
     "build:dist": "cross-env NODE_ENV=development webpack --config  build/webpack.config.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.js",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -33,6 +34,7 @@
     "eslint-plugin-vue": "^7.6.0",
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.2.0",
     "markdown-it": "^12.0.4",
     "markdown-it-anchor": "^7.0.2",
