--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
     "trailingComma": "all",
     "printWidth": 100,
     "proseWrap": "never",
+    "endOfLine": "auto",
     "overrides": [
         {
             "files": ".prettierrc",
