--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "A Vue.js 2.0 UI Toolkit for Web",
   "scripts": {
+    "bootstrap": "yarn || npm i",
+    "build:file": "node build/bin/build-entry.js",
     "lint": "eslint --fix examples  packages ",
     "clean": "rimraf dist && rimraf packages/*/lib && rimraf test/**/coverage",
     "build:dist": "cross-env NODE_ENV=development webpack --config  build/webpack.config.js",
@@ -11,6 +13,7 @@
   },
   "dependencies": {
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "throttle-debounce": "^3.0.1",
     "transliteration": "^2.2.0"
   },
   "peerDependencies": {
@@ -36,12 +39,14 @@
     "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.2.0",
+    "json-templater": "^1.2.0",
     "markdown-it": "^12.0.4",
     "markdown-it-anchor": "^7.0.2",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
     "prettier": "2.2.1",
     "style-loader": "^2.0.0",
+    "uppercamelcase": "^3.0.0",
     "url-loader": "^4.1.1",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
@@ -60,7 +65,7 @@
   "bugs": {
     "url": "https://github.com/andurils/me-vue-ui/issues"
   },
-  "homepage": "https://github.com/andurils/me-vue-ui#readme",
+  "homepage": "https://andurils.github.io/me-vue-ui",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
