--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "throttle-debounce": "^3.0.1",
-    "transliteration": "^2.2.0"
+    "normalize-wheel": "^1.0.1",
+    "throttle-debounce": "^3.0.1"
   },
   "peerDependencies": {
     "vue": "^2.6.12"
@@ -44,8 +44,11 @@
     "markdown-it-anchor": "^7.0.2",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
+    "node-sass": "^5.0.0",
     "prettier": "2.2.1",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "transliteration": "^2.2.0",
     "uppercamelcase": "^3.0.0",
     "url-loader": "^4.1.1",
     "vue": "^2.6.12",
