--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
+    "highlight.js": "^10.6.0",
     "html-webpack-plugin": "^5.2.0",
     "json-templater": "^1.2.0",
     "markdown-it": "^12.0.4",
