--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --fix examples  packages ",
     "clean": "rimraf dist && rimraf packages/*/lib && rimraf test/**/coverage",
     "build:dist": "cross-env NODE_ENV=development webpack --config  build/webpack.config.js",
+    "build:theme": "node build/bin/gen-cssfile && gulp build --gulpfile packages/theme-gondor/gulpfile.js && cp-cli packages/theme-gondor/lib lib/theme-gondor",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.js",
     "deploy": "gh-pages -d dist"
   },
@@ -28,6 +29,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "cp-cli": "^2.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "cz-conventional-changelog": "^3.3.0",
@@ -38,6 +40,10 @@
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-sass": "^4.1.0",
     "highlight.js": "^10.6.0",
     "html-webpack-plugin": "^5.2.0",
     "json-templater": "^1.2.0",
