--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "bootstrap": "yarn || npm i",
     "build:file": "node build/bin/build-entry.js",
-    "lint": "eslint --fix examples  packages ",
-    "clean": "rimraf dist && rimraf packages/*/lib && rimraf test/**/coverage",
     "build:dist": "cross-env NODE_ENV=development webpack --config  build/webpack.config.js",
     "build:theme": "node build/bin/gen-cssfile && gulp build --gulpfile packages/theme-gondor/gulpfile.js && cp-cli packages/theme-gondor/lib lib/theme-gondor",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.js",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "clean": "rimraf dist && rimraf packages/*/lib && rimraf test/**/coverage",
+    "lint": "eslint --fix src/**/*  packages/**/*  --quiet"
   },
   "dependencies": {
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
