--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A Vue.js 2.0 UI Toolkit for Web",
   "scripts": {
     "bootstrap": "yarn || npm i",
-    "build:file": "node build/bin/build-entry.js && npm run lint",
+    "build:file": "node build/bin/build-entry.js & node build/bin/i18n.js && npm run lint",
     "build:dist": "cross-env NODE_ENV=development webpack --config  build/webpack.config.js",
     "build:theme": "node build/bin/gen-cssfile && gulp build --gulpfile packages/theme-gondor/gulpfile.js && cp-cli packages/theme-gondor/lib lib/theme-gondor",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.js",
+    "i18n": "node build/bin/i18n.js",
     "deploy": "gh-pages -d dist",
     "clean": "rimraf dist && rimraf packages/*/lib && rimraf test/**/coverage",
     "lint": "eslint --fix src/**/*  packages/**/*  --quiet"
