style(示例样式布局引入侧边导航，增加scrollbar bactop组件): 示例页面优化

--- a/components.json
+++ b/components.json
@@ -5,5 +5,7 @@
   "button-group": "./packages/button-group/index.js",
   "icon": "./packages/icon/index.js",
   "row": "./packages/row/index.js",
-  "col": "./packages/col/index.js"
+  "col": "./packages/col/index.js",
+  "scrollbar": "./packages/scrollbar/index.js",
+  "backtop": "./packages/backtop/index.js"
 }
